<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meterkast</string>
    <string name="menu_settings">Instellingen</string>
    <string name="button_record">Stand Opnemen</string>
    <string name="button_options">Opties Aanpassen</string>
    <string name="button_remind">Maak herinnering voor morgen</string>
    <string name="hello_world">Placeholder</string>
    <string name="make_note">Herinnering aangemaakt</string>
    
    <string name="incomplete">Incompleet ingevuld!</string>
    
    
    <string name="title_activity_stand_opname">Opnamescherm</string>
    <string name="title_activity_optie_menu">Optiescherm</string>
    <string name="share_message">Mijn stroomverbruik!</string>
    <string name="sharewindow_title">Waarmee wil je dit delen?</string>
    
    <string name="woonsituatie">Woonsituatie</string>
    <string name="metersoort">Metersoort</string>
    <string name="bewoners">Aantal bewoners</string>
    
    <string name="button_save">Opslaan</string>
    <string name="button_cancel">Annuleren</string>
    
    <string name="los_huis">Losstaand huis</string>
    <string name="rijtjeshuis">Rijtjeshuis</string>
    <string name="appartement">Appartement</string>
    
    <string name="een_twee">Eén of twee</string>
    <string name="drie_vijf">Drie tot vijf</string>
    <string name="zes_meer">Zes of meer</string>
    
    <string name="enkele_stand">Enkele stand</string>
    <string name="twee_standen">Dubbele stand</string>
    <string name="anders_standen">Anders</string>
    
    <string name="switchuser">Gebruiker wisselen</string>
    
    <string name="button_reset">Wis alle data (kijk uit!)</string>
    
    <string name="take_pic">Neem een foto</string>
    <string name="picture_goeshere">Neem een foto van je meterstanden!</string>
    <string name="stand1">Vul stand 1 in</string>
    <string name="stand2">Vul stand 2 in</string>
    
    <string name="welkom_bericht">Welkom! Er moeten eerst een paar opties worden geselecteerd.</string>
    <string name="ok_knop">OK</string>
    
    <string name="makerecording">Stand opnemen</string>
    <string name="makerecordingimplore">Maak een nieuwe opname van de meterstand!</string>
    
    

</resources>