<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hoofdscherm" >

    <Button
        android:id="@+id/buttonToRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_record"
        android:onClick="goToRecord" />

    <Button
        android:id="@+id/buttonToOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_options"
        android:onClick="goToOptions" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_remind"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:contentDescription="@string/picture_goeshere"
        android:src="@drawable/grid" />

    <Button
        android:id="@+id/button_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonToRecord"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonToRecord"
        android:onClick="scheduleNotification"
        android:text="@string/button_remind" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonToRecord"
        android:layout_toLeftOf="@+id/button_remind"
        android:onClick="shareSocialMedia"
        android:text="Deel dit via social media" />

</RelativeLayout>